# pspsd_trabalho_1

./: .gitignore  readme.md
Frotanext/: 1.txt
Frotanext/contratos_grpc/: autenticacao.proto  frota.proto
Frotanext/grpc/: pyvenv.cfg
Frotanext/modulo_a_auth/: README.md  servidor_autenticacao.py
Frotanext/modulo_b_frota/: docker-compose.yml  servidor_frota.py
Frotanext/web_client_frontend/: Dockerfile  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frotanext/: 1.txt  docker-compose.yml  readme.md  seed_banco.py
frotanext/contratos_grpc/: autenticacao.proto  frota.proto
frotanext/modulo_a_auth/: Dockerfile  docker-compose.yml  pytest.ini  servidor_autenticacao.py
frotanext/modulo_b_frota/: .gitignore  .pylintrc  Dockerfile  README.md  requirements.txt  servidor_frota.py
frotanext/modulo_p_gateway/: CMakeLists.txt  Dockerfile
frotanext/modulo_p_gateway/protos_gerados/: autenticacao.grpc.pb.h  autenticacao.pb.cc  autenticacao.pb.h  frota.grpc.pb.h  frota.pb.cc
frotanext/modulo_p_gateway/src/: main.cpp
frotanext/modulo_p_gateway/src/clientes_grpc/: cliente_autenticacao.hpp  cliente_frota.hpp  cliente_funcionario.hpp
frotanext/web_client_frontend/: docker-compose.yml  index.html
hserv/gateway-p/: Dockerfile  package-lock.json  package.json
hserv/service-a/: Dockerfile  package-lock.json  package.json
hserv/service-b/: Dockerfile  package-lock.json  package.json
proto/: service-a.proto  service-b.proto
serviceA/: service-a.grpc.pb.cc  service-a.grpc.pb.h  service-a.pb.cc  service-a.pb.h  serviceA_server.cc
(+121 files in other folders)
